test/libsolidity/syntaxTests/array/concat/bytes_concat_wrong_type_empty_array_literal.sol
contract C {
    function f() public {
        bytes.concat([], [], []);
    }
}
// ----
// TypeError 6378: (60-62): Unable to deduce common type for array elements.
